# FinTrack

./: .editorconfig  .env  .env.example  .gitignore  DATABASE_FIX_SUMMARY.md  FRONTEND_TESTING_GUIDE.md  INGESTION_AGENT_FRONTEND_ANALYSIS.md  PROJECT_COMPREHENSIVE_SUMMARY.md  README.md  SUGGESTION_AGENT_FIX_SUMMARY.md  SUGGESTION_AGENT_IMPLEMENTATION_REPORT.md  __init__.py  check_db.py  check_profiles.py  check_transactions.py  demo.py  demo_enhanced_processing.py  fintrack.db  justfile  langgraph.json  langgraph_server.py  main.py  pyproject.toml  quick_ingestion_test.py  quick_test.py  realistic_transactions.csv  setup_auth.py  setup_langgraph.py  start_server.py  systemArchi.wsd  test_app_status.py  test_basic.py  test_classifier.csv  test_expenses_new.csv  test_frontend_transactions.csv  test_safety_guard_triggers.csv  test_safety_guard_triggers_small.csv  test_trans.csv  test_trans_small.csv  test_transactions.csv  (+1 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
config/: settings.py
docs/: AGENT_REFACTORING_SUMMARY.md  CLEANUP_AND_DATABASE_SETUP.md  ENHANCED_INGESTION_IMPLEMENTATION.md  FINAL_APPLICATION_REPORT.md  LANGGRAPH_IMPLEMENTATION.md  LANGGRAPH_SETUP_GUIDE.md  PROJECT_ANALYSIS.md  SETUP_COMPLETE.md  ai_modification_prompt.md  final_doc.md
docs_md/: ADVANCED_AGENTS_FIX.md  ANALYTICS_FIXES_SUMMARY.md  comprehensive_test_inputs.md
fintrack-frontend/: .gitignore  README.md  package-lock.json  package.json
fintrack-frontend/public/: site.webmanifest
fintrack-frontend/supabase/: config.toml
frontend/: streamlit_app.py
frontend/components/: charts.py  conversational_entry.py  data_display.py  forms.py  insights_generator.py  widgets.py
frontend/pages/: Category_Management.py  Dashboard.py  Security_Monitor.py  Suggestions.py  Upload_Transactions.py  analytics.py  category_management.py  dashboard.py  login.py  security_monitor.py  suggestions.py  upload_transactions.py
frontend/utils/: api_client.py  session_state.py
src/: __init__.py
src/agents/: __init__.py  classifier_agent.py  classifier_agent.py.backup  ingestion_agent.py  ner_merchant_agent.py  pattern_analyzer_agent.py  safety_guard_agent.py  suggestion_agent.py  transaction_classifier_agent.py.backup  (+1 more)
(+100 files in other folders)
